# andersenlab-todo-list-helper

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
myproject/: Dockerfile  entrypoint.sh
myproject/fixtures/: fixtures_users_tasks.json
myproject/mysite/: settings.py  urls.py
myproject/tasks/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
myproject/tasks/migrations/: 0001_initial.py  0002_initial.py
myproject/tests/: conftest.py  test_auth.py  test_tasks.py
myproject/users/: models.py  serializers.py  urls.py  views.py
myproject/users/migrations/: 0001_initial.py
mytodo/mytodo/: settings.py  urls.py
mytodo/tasks/: views.py
